Opened 15 years ago
Closed 15 years ago
#22 closed defect (fixed)
ffmpeg no longer compile on i386
| Reported by: | Levente Farkas | Owned by: | Michael Niedermayer |
|---|---|---|---|
| Priority: | normal | Component: | ffmpeg |
| Version: | git | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
ffmpeg-0.6.1 no longer compile while 0.6 was compile on i386 without any cpu extension (eg mmx etc) since compiler gives this error:
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c: In function 'ff_getSwsFunc':
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c:1266: warning: implicit declaration of function 'sws_init_swScale_MMX2'
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c:1267: error: 'swScale_MMX2' undeclared (first use in this function)
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c:1267: error: (Each undeclared identifier is reported only once
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c:1267: error: for each function it appears in.)
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c:1269: warning: implicit declaration of function 'sws_init_swScale_3DNow'
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c:1270: error: 'swScale_3DNow' undeclared (first use in this function)
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c:1272: warning: implicit declaration of function 'sws_init_swScale_MMX'
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c:1273: error: 'swScale_MMX' undeclared (first use in this function)
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c: In function 'sws_scale':
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c:1907: warning: passing argument 1 of 'check_image_pointers' from incompatible pointer type
/builddir/build/BUILD/ffmpeg-20110227/libswscale/swscale.c:1911: warning: passing argument 1 of 'check_image_pointers' discards qualifiers from pointer target type
Attachments (1)
Change History (8)
comment:1 by , 15 years ago
by , 15 years ago
| Attachment: | ffmpeg-0.6.1-1.20110227git.el5.viduxos.src.rpm-build.log added |
|---|
comment:2 by , 15 years ago
the first problem is that during configure it do not automatically recognize yasm (while it was recognized in 0.6) but after i manually add --enable-yasm to configure line it's still not compile.
comment:3 by , 15 years ago
| Reproduced by developer: | set |
|---|---|
| Status: | new → open |
Your build log shows libavfilter/vf_gradfun.o
there is no such file in 0.6.1
I could reproduce this with master though
comment:4 by , 15 years ago
I do not believe the original configure line makes sense (--enable-runtime-cpudetect --disable-mmx --disable-amd3dnow)
The problem is also reproducible with current git and the following configure line (that might make sense)
./configure --disable-amd3dnow --enable-runtime-cpudetect
comment:6 by , 15 years ago
./configure --cc='gcc -m32' --enable-runtime-cpudetect
works fine here...
comment:7 by , 15 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
hopefully fixed in 95c8bb0
this was a regression caused by 0fc29f2708afa4bf01014667d668376e2261e0fa



Please post the configure line you are using.
And since you set "Version" to "git": Is this only reproducible with 0.6.1 or also with current git?