Fix compilation failure with runtime cpudetect (Ticket #22)